--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <title>Reymon</title>
-    <link rel="icon" href="img/MyCharacterNoBG.png" type="image/x-icon">
+    <link rel="icon" href="img/TabIcon.png" type="image/x-icon">
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -63,7 +63,7 @@
                 <li class="box-label">Home</li>
 
                 <li><a href="index.html">Home</a> <i class="ion-ios-circle-filled color"></i></li>
-                <li><a href="about.html">About me</a></li>
+                <li><a href="about.html">About me</a></li>  
                 <li><a href="services.html">Services</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="contact.html">Contact me</a></li>
@@ -72,10 +72,10 @@
 
                 <li class="box-label">Follow me</li>
 
-                <li class="box-social"><a href="#0"><i class="fab fa-instagram"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="fab fa-facebook"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="fas fa-envelope"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="fab fa-behance"></i></a></li>
+                <li class="box-social"><a href="https://www.instagram.com/rey.mon_stha/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li class="box-social"><a href="https://www.facebook.com/rey.mon.954918/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                <li class="box-social"><a href="https://www.linkedin.com/in/remant-shrestha-77246032a/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <li class="box-social"><a href="https://www.behance.net/remant_shrestha" target="_blank"><i class="fab fa-behance"></i></a></li>
 
 
 
@@ -111,12 +111,12 @@
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6  fashion logo">
                     <a href="single-project.html" class="portfolio_item">
-                        <img src="img/KingsFashion.jpeg" alt="image" class="img-responsive" />
+                        <img src="img/NikeAirMax.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Logo Design</span>
-                                    <em>Branding / Logo</em>
+                                    <span>Advertisement</span>
+                                    <em>Ads / Graphic</em>
                                 </div>
                             </div>
                         </div>
@@ -143,12 +143,12 @@
                 <!-- single work -->
                 <div class="col-md-6 col-sm-12 photography">
                     <a href="single-project.html" class="portfolio_item">
-                        <img src="img/Mobile UI.png" alt="image" class="img-responsive" />
+                        <img src="img/Teenpatti.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mobile UI Design</span>
-                                    <em>UI Design</em>
+                                    <span>Game Design</span>
+                                    <em>UI & Graphic Design</em>
                                 </div>
                             </div>
                         </div>
@@ -164,7 +164,7 @@
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
                                     <span>Game Icon Design</span>
-                                    <em>Game Design</em>
+                                    <em>Logo / Icon / Game Design</em>
                                 </div>
                             </div>
                         </div>
@@ -175,12 +175,12 @@
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 graphics ads">
                     <a href="single-project.html" class="portfolio_item">
-                        <img src="img/RetroAdda.png" alt="image" class="img-responsive" />
+                        <img src="img/FoodPoster1.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Logo Design</span>
-                                    <em>Logo / Branding</em>
+                                    <span>Social Media Post</span>
+                                    <em>Adds / Graphic</em>
                                 </div>
                             </div>
                         </div>
@@ -189,6 +189,162 @@
                 <!-- end single work -->
 
                 <!-- single work -->
+                <div class="col-md-6 col-sm-12 photography">
+                    <a href="single-project.html" class="portfolio_item">
+                        <img src="img/LudoArena.png" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Game Design</span>
+                                    <em>UI / Graphic</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+
+                <!-- single work -->
+                <div class="col-md-3 col-sm-6 graphics ads">
+                    <a href="single-project.html" class="portfolio_item">
+                        <img src="img/MBappePoster.png" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Poster Design</span>
+                                    <em>Graphics / Adds</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+
+                <!-- single work -->
+                <div class="col-md-3 col-sm-6 graphics ads">
+                    <a href="single-project.html" class="portfolio_item">
+                        <img src="img/ChairPoster.jpg" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Product Design</span>
+                                    <em>Branding / Adds</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+
+                <!-- single work -->
+                <div class="col-md-3 col-sm-6 graphics ads">
+                    <a href="single-project.html" class="portfolio_item">
+                        <img src="img/Mohito.png" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Product Design</span>
+                                    <em>Graphics / Ads</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+
+                <!-- single work -->
+                <div class="col-md-3 col-sm-6 graphics ads">
+                    <a href="single-project.html" class="portfolio_item">
+                        <img src="img/RadianceMist.png" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Product Design</span>
+                                    <em>Graphics / Ads</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+                <div class="col-md-3 col-sm-6  fashion logo">
+                    <a href="single-project.html" class="portfolio_item">
+                        <img src="img/Nike87Pulse.png" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Advertisement</span>
+                                    <em>Graphics / Ads</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+
+                <!-- single work -->
+                <div class="col-md-3 col-sm-6 ads graphics">
+                    <a href="single-project.html" class="portfolio_item">
+                        <img src="img/Yatri.png" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Socail Media Adds</span>
+                                    <em>Graphics / Ads</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+
+                <!-- single work -->
+                <div class="col-md-6 col-sm-12 photography">
+                    <a href="single-project.html" class="portfolio_item">
+                        <img src="img/UltimaBoom.png" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Poster Design</span>
+                                    <em>Graphics / Ads / Branding</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+                  <!-- single work -->
+                <div class="col-md-3 col-sm-6 fashion ads">
+                    <a href="single-project.html" class="portfolio_item">
+                        <img src="img/MothersDay.jpg" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Social Media</span>
+                                    <em>Ads / Social Media</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+
+                <!-- single work -->
+                <div class="col-md-3 col-sm-6 graphics ads">
+                    <a href="single-project.html" class="portfolio_item">
+                        <img src="img/Spiderman.png" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Illustration</span>
+                                    <em>Logo / Branding</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+                 <!-- single work -->
                 <div class="col-md-6 col-sm-12 photography">
                     <a href="single-project.html" class="portfolio_item">
                         <img src="img/MambaPoster.png" alt="image" class="img-responsive" />
@@ -223,7 +379,7 @@
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 graphics ads">
                     <a href="single-project.html" class="portfolio_item">
-                        <img src="img/Murraaa Family.png" alt="image" class="img-responsive" />
+                        <img src="img/CreepyEye.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
@@ -239,11 +395,11 @@
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 graphics ads">
                     <a href="single-project.html" class="portfolio_item">
-                        <img src="img/Mohito.png" alt="image" class="img-responsive" />
+                        <img src="img/FaceCream.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mobile devices</span>
+                                    <span>Poster Design</span>
                                     <em>Graphics / Ads</em>
                                 </div>
                             </div>
@@ -255,18 +411,20 @@
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 graphics ads">
                     <a href="single-project.html" class="portfolio_item">
-                        <img src="img/KingsFashion.jpeg" alt="image" class="img-responsive" />
+                        <img src="img/Eye.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Product Design</span>
-                                    <em>Graphics / Ads</em>
+                                    <span>Illustration</span>
+                                    <em>Graphics</em>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <!-- end single work -->
+
+                 
             </div>
             <!-- end portfolio_container -->
         </div>
